--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="source/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="source/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="source/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="source/favicon-16x16.png">
+    <link rel="manifest" href="source/site.webmanifest">
     <title>Авторизация</title>
   </head>
 
@@ -32,7 +32,7 @@
           script.setAttribute('data-telegram-login', 'richmom_auth_bot');
           script.setAttribute('data-size', 'large');
           script.setAttribute('data-radius', '4');
-          script.setAttribute('data-auth-url', `https://richmom.vercel.app/auth?source=${encodeURIComponent(source)}`);
+          script.setAttribute('data-auth-url', `https://merrivoir.github.io/RA?source=${encodeURIComponent(source)}`);
           script.setAttribute('data-request-access', 'write');
       
           // Добавляем скрипт в контейнер
