--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <div class="login-container">
       <h1>Вход через Telegram</h1>
-      <div id="telegram-widget"></div>
+      <div id="telegram-widget">
+      </div>
     </div>
       
     <script>
@@ -42,6 +43,7 @@
         }
       });
     </script>
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="learnPytBot" data-size="large" data-radius="4" data-auth-url="richmom.vercel.app/verify"></script>
       
   </body>
 
