--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           const script = document.createElement('script');
           script.async = true;
           script.src = 'https://telegram.org/js/telegram-widget.js?22';
-          script.setAttribute('data-telegram-login', 'richmom_auth_bot');
+          script.setAttribute('data-telegram-login', 'learnPytBot');
           script.setAttribute('data-size', 'large');
           script.setAttribute('data-radius', '4');
           script.setAttribute('data-auth-url', `https://merrivoir.github.io/RA?source=${encodeURIComponent(source)}`);
