--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         }
       });
     </script>
-    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="learnPytBot" data-size="large" data-radius="4" data-auth-url="richmom.vercel.app/verify"></script>
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="learnPytBot" data-size="large" data-radius="4" data-onauth="onTelegramAuth(user)"></script>
+    <script type="text/javascript">
+      function onTelegramAuth(user) {
+        alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+      }
+    </script>
       
   </body>
 
