--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         }
       });
     </script>
-    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="learnPytBot" data-size="large" data-radius="4" data-onauth="onTelegramAuth(user)"></script>
+    <!--<script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="learnPytBot" data-size="large" data-radius="4" data-onauth="onTelegramAuth(user)"></script>
     <script type="text/javascript">
       function onTelegramAuth(user) {
         alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
       }
-    </script>
+    </script>-->
       
   </body>
 
