--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         const params = new URLSearchParams(window.location.search);
-        const source = params.get('source') || 'https://richmom.vercel.app';
+        const source = params.get('source') || 'http://193.228.139.199';
         
         const tgcont = document.getElementById('telegram-widget');
         if (tgcont) {
@@ -30,7 +30,7 @@
           script.setAttribute('data-telegram-login', 'learnPytBot');
           script.setAttribute('data-size', 'large');
           script.setAttribute('data-radius', '4');
-          script.setAttribute('data-auth-url', `https://richmom.vercel.app/auth?source=${encodeURIComponent(source)}`);
+          script.setAttribute('data-auth-url', `http://193.228.139.199/auth/prime?source=${encodeURIComponent(source)}`);
           script.setAttribute('data-request-access', 'write');
           tgcont.appendChild(script);
         }
