--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           script.setAttribute('data-telegram-login', 'learnPytBot');
           script.setAttribute('data-size', 'large');
           script.setAttribute('data-radius', '4');
-          script.setAttribute('data-auth-url', `https://richmom.vercel.app/auth?source=${encodeURIComponent(source)}`);
+          script.setAttribute('data-auth-url', `http://193.228.139.199:3000/auth?source=${encodeURIComponent(source)}`);
           script.setAttribute('data-request-access', 'write');
           tgcont.appendChild(script);
         }
